feat: Use field-highlighter for collaborative editing in MUC04
Replace helper text-based editing indicators with the
vaadin-field-highlighter web component, showing colored outlines
and user name tags when other users are editing a field.

Field locking is now opt-in via a checkbox, allowing simultaneous
editing by default while still showing who else is editing.

- Rename lockField/unlockField to startEditing/stopEditing
- Rename createLockedField to createCollaborativeField
- Extract helper methods to reduce duplication
- Remove unused isFieldLockedByOther and userSessionRegistry field
- Replace fully-qualified names with imports